--- a/application/templates/dashboard.html
+++ b/application/templates/dashboard.html
@@ -21,7 +21,9 @@
 </head>
 
 
+
 {% block body_content %}
+<input type="hidden" id="username" name="username" value={{ username }}>
 <div class="container-fluid quote-container " >
     <div class="row justify-content-center ">
 
