--- a/application/templates/contact_feedback.html
+++ b/application/templates/contact_feedback.html
@@ -10,15 +10,13 @@
     <div class="card">
         <div class="card-body">
 
-                {% for Faq in comment %}
 
-            <p>Thank you <strong>{{ Faq.name }} </strong> for getting in touch.</p>
+            <p>Thank you <strong>{{ comment.name }} </strong> for getting in touch.</p>
 
                    <p>Here is a copy of your message: <br>
-                       <strong>{{ Faq.subject }} - </strong>
-                       <i>{{ Faq.question }} </i> </p>
+                       <strong>{{ comment.subject }} - </strong>
+                       <i>{{ comment.question }} </i> </p>
 
-                {% endfor %}
 
                     <p>We aim to respond to all enquiries within 48 hrs.</p>
 
