--- a/application/templates/my_bookings.html
+++ b/application/templates/my_bookings.html
@@ -7,48 +7,47 @@
 {% block body_content %}
 <h1>My Bookings</h1>
 <h2>Current bookings</h2>
-<p>Your current bookings are shown in the table below. </p>
+<p>Any current bookings are shown in the table below. </p>
+<input type="hidden" id="username" name="username" value={{ username }}>
 <table>
   <thead>
     <tr>
         <th>Date</th>
         <th>Class</th>
-        <th>Class</th>
+        <th>Timeslot</th>
     </tr>
     </thead>
-<!--    <tbody>-->
-<!--     {% for BookedActivity in booking_class  %}-->
-<!--&lt;!&ndash;            {% if BookActivity.date <= BookActivity.date.now() %}&ndash;&gt;-->
-<!--            <tr>-->
-<!--                <td>{{ BookedActivity.date }}</td>-->
-<!--                <td>{{ BookedActivity.timeslot }}</td>-->
-<!--                <td>{{ BookedActivity.class }}</td>-->
-<!--            </tr>-->
-<!--&lt;!&ndash;            {% endif %}&ndash;&gt;-->
-<!--        {% endfor %}-->
+    <tbody>
+     {% for BookedActivity in current  %}
+            <tr>
+                <td>{{ BookedActivity.date }}</td>
+                <td>{{ BookedActivity.activity_type }}</td>
+                <td>{{ BookedActivity.timeslot }}</td>
+            </tr>
+            {# endif #}
+        {% endfor %}
     </tbody>
 </table>
-<!--<h2>Past bookings</h2>-->
-<!--<p>The table below displays the previous classes you have attended.</p>-->
-<!--<table>-->
-<!--  <thead>-->
-<!--    <tr>-->
-<!--        <th>Date</th>-->
-<!--        <th>Session name</th>-->
-<!--        <th>Instructor</th>-->
-<!--    </tr>-->
-<!--    </thead>-->
-<!--    <tbody>-->
-<!--     {% for BookActivity in booking_class  %}-->
-<!--            {% if BookActivity.date > BookActivity.date.now() %}-->
-<!--            <tr>-->
-<!--                <td>{{ BookActivity.date }}</td>-->
-<!--                <td>{{ BookActivity.timeslot }}</td>-->
-<!--                <td>{{ BookActivity.class }}</td>-->
-<!--            </tr>-->
-<!--            {% endif %}-->
-<!--        {% endfor %}-->
-<!--    </tbody>-->
+<h2>Past bookings</h2>
+<p>The table below displays any previous classes you have attended.</p>
+<table>
+  <thead>
+    <tr>
+        <th>Date</th>
+        <th>Class</th>
+        <th>Timeslot</th>
+    </tr>
+    </thead>
+    <tbody>
+     {% for BookActivity in past  %}
+            <tr>
+                <td>{{ BookActivity.date }}</td>
+                <td>{{ BookActivity.activity_type }}</td>
+                <td>{{ BookActivity.timeslot }}</td>
+            </tr>
+            {# endif #}
+        {% endfor %}
+    </tbody>
 </table>
 </div>
 <br>
