added date restriction on booking and added form to delete booking

--- a/application/templates/my_bookings.html
+++ b/application/templates/my_bookings.html
@@ -5,13 +5,19 @@
 {% block title %}MyBookings{% endblock %}
 
 {% block body_content %}
-<h1>My Bookings</h1>
-<h2>Current bookings</h2>
-<p>Any current bookings are shown in the table below. </p>
+<div class="row justify-content-center">
+   <div class="col-md-8 col-12">
+        <h1>My current bookings</h1>
+        <p>Any current bookings are shown in the table below. </p>
+   </div>
+</div>
+
 <input type="hidden" id="username" name="username" value={{ username }}>
-<table>
+
+<table class="table table-striped" style="width:70%; margin-left:15%; margin-right:15%;">
   <thead>
     <tr>
+        <th>Booking Id</th>
         <th>Date</th>
         <th>Class</th>
         <th>Timeslot</th>
@@ -20,6 +26,7 @@
     <tbody>
      {% for BookedActivity in current  %}
             <tr>
+                <td>{{ BookedActivity.booking_id }}</td>
                 <td>{{ BookedActivity.date }}</td>
                 <td>{{ BookedActivity.activity_type }}</td>
                 <td>{{ BookedActivity.timeslot }}</td>
@@ -28,9 +35,46 @@
         {% endfor %}
     </tbody>
 </table>
-<h2>Past bookings</h2>
-<p>The table below displays any previous classes you have attended.</p>
-<table>
+<hr>
+<main class="form-del_booking">
+  <form class="container" method="POST" action="{{ url_for('my_bookings') }}">
+      <div class="row justify-content-center">
+          <div class="col-md-8 col-12">
+              <h1 class="h3 mb-3 fw-normal">Delete a booking?</h1>
+        </div>
+      </div>
+
+   <div class="row justify-content-center">
+        <div class="col-md-8 col-12 mb-2 ">
+
+      {{ form.hidden_tag() }}
+        <br>
+              {{ form.booking_id.label }} {{ form.booking_id(placeholder="Id number") }}
+              <br>
+    </div>
+   <div class="row justify-content-center">
+            <div class="col-md-8 col-12 mb-2 ">
+              {{ form.confirm_id.label }} {{ form.confirm_id(placeholder="Id number") }}
+            </div>
+   </div>
+   <div class="row justify-content-center">
+        <div class="col-md-8 col-12">
+            </div>
+                {{ form.submit(class="btn btn-primary") }}
+            </div>
+        </div>
+    </div>
+  </form>
+</main>
+<hr>
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-12">
+            <h2>Past bookings</h2>
+                <p>The table below displays any previous classes you have attended.</p>
+        </div>
+      </div>
+
+<table class="table table-striped" style="width:70%; margin-left:15%; margin-right:15%;">
   <thead>
     <tr>
         <th>Date</th>
