--- a/application/templates/password_reset.html
+++ b/application/templates/password_reset.html
@@ -27,7 +27,7 @@
       <div class="valid-feedback">
         Looks good!
       </div>
+    </div>
        {{ form.submit(class="btn btn-primary") }}
   </form>
-    {% endblock %}
-
+{% endblock %}
