--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -33,7 +33,7 @@
       </div>
     </div>
     <div class="col-md-4 mb-3">
-        {{ form.email_address.label }} {{ form.email_address(placeholder="example@getfit.com") }}
+        {{ form.email.label }} {{ form.email(placeholder="example@getfit.com") }}
         <div class="invalid-feedback">
           Please enter an email address.
         </div>
@@ -45,13 +45,13 @@
         </div>
     </div>
       <div class="col-md-4 mb-3">
-        {{ form.address_line.label }} {{ form.address_line }}
+        {{ form.address.label }} {{ form.address}}
         <div class="invalid-feedback">
           Please choose an address.
         </div>
     </div>
     <div class="col-md-4 mb-3">
-        {{ form.post_code.label }} {{ form.post_code }}
+        {{ form.postcode.label }} {{ form.postcode }}
         <div class="invalid-feedback">
           Please choose a postcode.
         </div>
