--- a/application/templates/booking.html
+++ b/application/templates/booking.html
@@ -1,4 +1,8 @@
-{% extends "layout.html" %}
+{% if current_user.is_authenticated %}
+    {% extends "logged_layout.html" %}
+{%else%}
+    {% extends "layout.html" %}
+{% endif %}
 
 {{ url_for('templates', filename='booking.html') }}
 
@@ -22,7 +26,7 @@
                 <dd>
                         <br>
                     <div class="form-floating">
-
+                      {{ form.email_address.label }} {{ form.email_address }}
                         <br>
                     </div>
                     <br>
