--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -46,7 +46,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="{{ url_for('book') }}" >BOOK A CLASS</a>
+          <a class="nav-link" href="{{ url_for('book') }}" >GYM CLASSES</a>
         </li>
 
       </ul>
