updated booking functionality and added content to profile

--- a/application/templates/activities.html
+++ b/application/templates/activities.html
@@ -9,13 +9,16 @@
 {% block title %}ActivitiesBook a Class{% endblock %}
 
 {% block body_content %}
+<div class="row justify-content-center">
+        <div class="col-md-8 col-12">
+            <h2>Our Daily Classes</h2>
+                <p>We offer a wide range of activities every day for all ages and abilities.</p>
+                <p>Our instructors are highly qualified and experienced professionals ready to
+                    help you achieve your goals.</p>
+        </div>
+      </div>
 <div>
-<h1>Our Daily Classes</h1>
-<p>We offer a wide range of activities every day for all ages and abilities.</p>
-<p>Our instructors are highly qualified and experienced professionals ready to help you achieve your goals.</p>
-</div>
-<div>
-  <table class="table table-striped">
+  <table class="table table-striped" style="width:70%; margin-left:15%; margin-right:15%;">
          <thead>
             <tr>
                <th>Type</th>
