--- a/application/templates/delete_account.html
+++ b/application/templates/delete_account.html
@@ -12,12 +12,12 @@
 
   <div class="form-row">
      <div class="col-md-4 mb-3">
-      {{ form.email.label }} {{ form.email }}
+      {{ form.password.label }} {{ form.password }}
         <div class="valid-feedback">
         Looks good!
       </div>
     <div class="col-md-4 mb-3">
-      {{ form.confirm_email.label }} {{ form.confirm_email }}
+      {{ form.confirm_password.label }} {{ form.confirm_password }}
         <div class="valid-feedback">
         Looks good!
       </div>
