--- a/application/templates/profile.html
+++ b/application/templates/profile.html
@@ -27,10 +27,10 @@
     <li class="list-group-item"><strong>Email: </strong> {{ info.email }}</li>
     <li class="list-group-item"><strong>Date of birth: </strong>{{ info.date_of_birth }}</li>
     <li class="list-group-item"><strong>Phone Number: </strong>{{ info.phone_number }}</li>
-    <li class="list-group-item"><strong>Address: </strong>{{ info.address_line }}</li>
+    <li class="list-group-item"><strong>Address: </strong>{{ info.address }}</li>
     <li class="list-group-item"><strong>City: </strong>{{ info.city }}</li>
     <li class="list-group-item"><strong>Postcode: </strong>{{ info.postcode }}</li>
-    <li class="list-group-item"><strong>Membership: </strong>are we going to add membership type/status here?</li>
+    <li class="list-group-item"><strong>Membership: </strong>{{ info.select_membership }}</li>
   </ul>
 
   <div class="card-body">
