--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -5,8 +5,8 @@
 {% block title %}Register{% endblock %}
 
 {% block body_content %}
+<div class="container form-container text-center">
 <form method="POST" action="{{ url_for('register') }}">
-<div class="container form-container">
 
 <!--            {% if error %}-->
 <!--                <p class=message><strong>Message</strong> {{ error }}-->
@@ -14,6 +14,12 @@
 <form class="needs-validation" novalidate>
 
   <div class="form-row">
+      <div class="col-md-4 mb-3">
+      {{ form.select_membership.label }} {{ form.select_membership }}
+        <div class="valid-feedback">
+        Looks good!
+      </div>
+    </div>
     <div class="col-md-4 mb-3">
       {{ form.first_name.label }} {{ form.first_name }}
         <div class="valid-feedback">
