more changes made, css pages assigned

--- a/application/templates/home.html
+++ b/application/templates/home.html
@@ -68,8 +68,9 @@
             <div class="col-8" >
                 <a name="about"></a>
                 <h2>EVERYBODY IS WELCOME AT THE UK'S FAVOURITE GYM</h2>
-                <p>From low cost flexible memberships and 24 hour opening times, to quality gym equipment and classes included, there are loads of reasons why Pure Fitness is the UK's favourite gym.
-                    Our mission is to help people everywhere to lead a healthy and happy life every day. Come and join us today.</p>
+                <p>From low cost flexible memberships and <strong>24 hour</strong> opening times, to quality gym equipment and classes included, there are loads of reasons why Pure Fitness is the UK's favourite gym.
+                    Our mission is to help people everywhere to lead a healthy and happy life every day. Come and join us today.
+                    We are centrally located:<strong>150 Piccadilly, St. James's, London W1J 9BR</strong></p>
             </div>
         </div>
 
