--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -29,7 +29,7 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('home')}}">
          <img src="static/images/pf_logo.jpg" alt="" width="60" height="60" class=" d-none d-md-inline-block align-text-center">
-      Pure Fitness</a>
+      Gym Fitness</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     <span></span>
@@ -110,7 +110,7 @@
         </div>
 
       <div class="outer-footer">
-        Copyright &copy; All rights reserved
+        &copy; Gym Fitness 2021
 
     </div>
 
