--- a/application/static/main.css
+++ b/application/static/main.css
@@ -113,10 +113,11 @@ font-size:24px;
 .nav-item{margin-right: 20px;}
 
 /*navbar and links end*/
-
+/*footer start*/
 /*footer start*/
 
 
+.footer{max-height:70px;}
 
 .footer-item,.social-items{
 list-style:none;
@@ -129,16 +130,45 @@ text-decoration:none;
 color:#fff;
 margin-left:20px;
 margin-right:20px;
+font-weight:700;
+
+}
+
+.footer li a:hover{
+color:rgba(0, 136, 169, 1);
+
 }
 
 .outer-footer{
 display:flex;
 padding: 10px;
 text-align: center;
-font-size: 10px;
+font-size: 12px;
 color:#fff;
+font-weight:700;
+}
+
+/*footer end*/
+
+/*delete account and reset password forms start*/
+label {
+    display: text-center;
+}
+
+.form-container {
+margin: auto;
+  width: 60%;
+  border: 3px outset;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content:center;
+  text-align: center;
+  align-items: center;
 
 }
+
+/*delete account and reset password forms end*/
 
 
 /*carousel start*/
