changed the password reset form and delete account form

--- a/application/templates/delete_account.html
+++ b/application/templates/delete_account.html
@@ -1,4 +1,8 @@
-{% extends "layout.html" %}
+{% if current_user.is_authenticated %}
+    {% extends "logged_layout.html" %}
+{%else%}
+    {% extends "layout.html" %}
+{% endif %}
 
 {{ url_for('templates', filename='delete_account.html') }}
 
@@ -6,24 +10,32 @@
 
 {% block body_content %}
 
-<form method="POST" action="{{ url_for('delete_account') }}">
-<div class="container form-container">
-<form class="needs-validation" novalidate>
+<body style="background-color:rgb(202, 240, 248);">
+<div class="container reset-body-container height">
+    <div class="container reset-container vh-10 mb-5">
 
-  <div class="form-row">
-     <div class="col-md-4 mb-3">
-      {{ form.password.label }} {{ form.password }}
-        <div class="valid-feedback">
-        Looks good!
-      </div>
-    <div class="col-md-4 mb-3">
-      {{ form.confirm_password.label }} {{ form.confirm_password }}
-        <div class="valid-feedback">
-        Looks good!
-      </div>
-    </div>
-       <div class="form-group">
-    <div class="form-check">
+        <form method="POST" action="{{ url_for('delete_account') }}">
+         <div class="row mb-3 mt-3">
+             <div class="col-md-8 ">
+                {{ form.password.label}} {{ form.password(class="reset-label") }}
+                <div class="valid-feedback">
+                Looks good!
+                </div>
+
+             </div>
+          </div>
+
+            <div class="row mb-3 mt-3 ">
+             <div class="col-md-8 mb-3">
+                 {{ form.confirm_password.label }} {{ form.confirm_password(class="reset-label")}}
+                 <div class="valid-feedback">
+                     Looks good!
+                 </div>
+               </div>
+            </div>
+
+         <div class="row form-group">
+    <div class="col-md-8 mb-3 form-check">
       <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
       <label class="form-check-label" for="invalidCheck">
         <a href = "{{ url_for ('policy') }}"> Agree to deleting your account</a>
@@ -33,6 +45,20 @@
       </div>
     </div>
   </div>
-       {{ form.submit(class="btn btn-primary") }}
-  </form>
-    {% endblock %}
+
+        <div class="row mb-3 mt-3 ">
+        <div class="col-md-8 mb-3">
+             {{ form.submit(class="btn btn-primary") }}
+         </div>
+        </div>
+
+
+        </form>
+
+
+    </div>
+</div>
+
+
+</body>
+{% endblock %}
