--- a/application/templates/password_reset.html
+++ b/application/templates/password_reset.html
@@ -1,33 +1,66 @@
-{% extends "layout.html" %}
+{% if current_user.is_authenticated %}
+    {% extends "logged_layout.html" %}
+{%else%}
+    {% extends "layout.html" %}
+{% endif %}
 
-{{ url_for('templates', filename='Password_reset.html') }}
+{{ url_for('templates', filename='password_reset.html') }}
 
-{% block title %}Password_reset{% endblock %}
+    {% block title %}Password Reset{% endblock %}
+{% block head %}
+{{ super() }}
+
+{% endblock %}
+
 
 {% block body_content %}
+<body style="background-color:rgb(202, 240, 248);">
+<div class="container reset-body-container height">
+    <div class="container reset-container vh-10 mb-5">
 
-<form method="POST" action="{{ url_for('password_reset') }}">
-<div class="container form-container">
-<form class="needs-validation" novalidate>
+        <form method="POST" action="{{ url_for('password_reset') }}">
+         <div class="row mb-3 mt-3">
+             <div class="col-md-8 ">
+                {{ form.email.label }} {{ form.email(class="reset-label") }}
+                <div class="valid-feedback">
+                Looks good!
+                </div>
 
-  <div class="form-row">
-     <div class="col-md-4 mb-3">
-      {{ form.email.label }} {{ form.email }}
-        <div class="valid-feedback">
-        Looks good!
-      </div>
-    <div class="col-md-4 mb-3">
-      {{ form.new_password.label }} {{ form.new_password }}
-        <div class="valid-feedback">
-        Looks good!
-      </div>
+             </div>
+          </div>
+
+            <div class="row mb-3 mt-3 ">
+             <div class="col-md-8 mb-3">
+                 {{ form.new_password.label }} {{ form.new_password (class="reset-label")}}
+                 <div class="valid-feedback">
+                     Looks good!
+                 </div>
+               </div>
+            </div>
+
+         <div class="row mb-3 mt-3 ">
+            <div class="col-md-8 mb-3">
+              {{ form.confirm_new_password.label }} {{ form.confirm_new_password (class="reset-label")}}
+              <div class="valid-feedback">
+                Looks good!
+              </div>
+        </div>
+        </div>
+
+        <div class="row mb-3 mt-3 ">
+        <div class="col-md-8 mb-3">
+             {{ form.submit(class="btn btn-primary") }}
+         </div>
+        </div>
+
+
+        </form>
+
+
     </div>
-    <div class="col-md-4 mb-3">
-      {{ form.confirm_new_password.label }} {{ form.confirm_new_password }}
-      <div class="valid-feedback">
-        Looks good!
-      </div>
-    </div>
-       {{ form.submit(class="btn btn-primary") }}
-  </form>
+</div>
+
+
+</body>
+
 {% endblock %}
