--- a/application/templates/dashboard.html
+++ b/application/templates/dashboard.html
@@ -22,8 +22,8 @@
 
 
 {% block body_content %}
-<div class="container-fluid quote-container " >
-    <div class="row justify-content-center ">
+<div class="container-fluid quote-container" >
+    <div class="row justify-content-center">
 
 
 
@@ -155,22 +155,33 @@
     </div>
     <div class="row justify-content-center">
         <div class="col-md-3 col-12 member-benefit">
+            <figure>
             <img src="{{url_for('static',filename='images/benefit1.png')}}" alt="" width="250px" height="250px">
+            <figcaption class="text-center font-weight-600"><strong>USE CODE: 'GIVEME30' in-store or online</strong></figcaption>
+            </figure>
 
         </div>
+
          <div class="col-md-3 col-12 member-benefit">
+            <figure>
             <img src="{{url_for('static',filename='images/benefit2.png')}}" alt="" width="250px" height="250px">
+            <figcaption class="text-center font-weight-600"><strong>USE CODE: 'PROTEIN30' online</strong></figcaption>
+            </figure>
 
         </div>
 
         <div class="col-md-3 col-12 member-benefit">
+            <figure>
             <img src="{{url_for('static',filename='images/benefit3.png')}}" alt="" width="250px" height="250px">
-
+            <figcaption class="text-center font-weight-600"><strong>USE CODE: '10HELLO' online only</strong></figcaption>
+            </figure>
         </div>
 
         <div class="col-md-3 col-12 member-benefit">
+            <figure>
             <img src="{{url_for('static',filename='images/benefit4.png')}}" alt="" width="250px" height="250px" >
-
+            <figcaption class="text-center font-weight-600"><strong>USE CODE: 'GIVEMETHIRTY' in-store or online</strong></figcaption>
+            </figure>
         </div>
 
     </div>
