--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -25,7 +25,7 @@
 <div class="navigation">
 <header>
 
-<nav class="navbar navbar-expand-lg mb-5">
+<nav class="navbar navbar-expand-lg ">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('home')}}">
          <img src="static/images/pf_logo.jpg" alt="" width="60" height="60" class=" d-none d-md-inline-block align-text-center">
