--- a/application/templates/logged_layout.html
+++ b/application/templates/logged_layout.html
@@ -25,7 +25,7 @@
 <div class="navigation">
 <header>
 
-<nav class="navbar navbar-expand-lg mb-5">
+<nav class="navbar navbar-expand-lg">
   <div class="container-fluid">
     <a class="navbar-brand" href="{{url_for('home')}}">
 
