--- a/application/templates/register.html
+++ b/application/templates/register.html
@@ -5,7 +5,11 @@
 {% block title %}Register{% endblock %}
 
 {% block body_content %}
-<div class="container form-container text-center">
+
+<div class="col-md-12 col-12">
+      <h1 class="text-center">REGISTER YOUR ACCOUNT</h1>
+</div>
+<div class="container form-container">
 <form method="POST" action="{{ url_for('register') }}">
 
 <!--            {% if error %}-->
@@ -81,7 +85,7 @@
         </div>
     </div>
   </div>
-  <div class="form-group">
+  <div class="form-group ">
     <div class="form-check">
       <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
       <label class="form-check-label" for="invalidCheck">
@@ -92,8 +96,18 @@
       </div>
     </div>
   </div>
+
     {{ form.submit(class="btn btn-primary") }}
+    <div class="border-top pt-3">
+        <small class="">
+            Already have an account? <a class="ml-1" href="{{ url_for('login') }}">login here</a>
+        </small>
+          </div>
 </form>
+
+    <br>
+    <br>
+    <br>
 </div>
 
 <script>
